<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="br.com.raynerweb.movies.ui.fragment.SeriesFragment" />

        <variable
            name="viewModel"
            type="br.com.raynerweb.movies.ui.viewmodel.SeriesViewModel" />

        <variable
            name="tvShow"
            type="br.com.raynerweb.movies.ui.model.TVShow" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/backdrop"
                    android:foreground="@drawable/backdrop_foreground"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:foreground="@drawable/backdrop_foreground"
                    tools:src="@drawable/backdrop" />

                <TextView
                    android:id="@+id/tv_title"
                    style="?attr/textAppearanceHeadline3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{tvShow.title}"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/bt_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="The Last of US" />

                <Button
                    android:id="@+id/bt_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableEnd="@drawable/baseline_play_circle_filled_24"
                    android:text="@string/see_more"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_series"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
                    tools:listitem="@layout/view_series" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/search"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
